--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "font-awesome": "^4.7.0",
-    "hogan.js": "^3.0.2"
+    "hogan.js": "^3.0.2",
+    "jquery-confirm": "^3.3.4"
   }
 }
